fixes image spilling out of screen

--- a/css/app.css
+++ b/css/app.css
@@ -55,8 +55,8 @@ body h1{
     border-radius: 5px;
 }
 
-.section-1 img{
-    height: 20rem;
+#home-image{
+    max-width: 100%;
 }
 
 
